runit 1.0.4
Sun, 01 Aug 2004 18:29:36 +0000
  * doc/runlevels.html, doc/upgrade.html, doc/useinit.html, man/runsvdir.8,
    man/runsvchdir.8: minor changes in wording, notations.
  * runsvdir.c: check services dir again after one second until it's
    unchanged (thx Eric Lammerts); loop while chdir to starting dir fails.

runit 1.0.3
Sat, 26 Jun 2004 14:50:41 +0000
  * chpst.c, man/chpst.8: new option -/ chroot.
  * runit.c, man/runit.8: if stage 1 crashes or exits 100, stage 2 will be
    skipped; if stage 2 crashes or exits 111, it will be restarted.
  * package/check, package/compile, package/install-man, package/upgrade:
    minor cleanup.
  * doc/runscripts.html: add, adapt various run scripts (thx).

runit 1.0.2
Mon, 29 Mar 2004 17:52:50 +0000
  * man/svlogd.8: timestamps are not considered when matching patterns (thx
    Andras KORN).
  * runsv.c: on exit run the finish scripts when taking the service down
    (thx X.).
  * runsv.c, runsvctrl.c: handle sig_quit (thx Wayne Marshall).
  * svlogd.c: don't crash on zero byte long config file (thx Alex Efros).
  * man/*: minor cleanup.
  * doc/index.html: add link to runit on linuxfromscratch doc (thx Richard
    A Downing FBCS).

runit 1.0.1
Sun, 07 Mar 2004 10:40:40 +0000
  * doc/usedietlibc.html: minor.
  * fmt_ptime.c: create timestamps in UTC, not localtime.
  * chpst.c: -e dir: silently ignore directories, print warning if verbose.
  * runsv.c: allow also log/supervise to be a dangling symlink; more
    meaningful error message if opening lock or locking fails.
  * check-diff, check-dist, check-local, package/check: new; run checks on
    programs.
  * package/install: run package/check.
  * chpst.check, runit-init.check, runit.check, runsv.check,
    runsvchdir.check, runsvctrl.check, runsvdir.check, runsvstat.check,
    svlogd.check, svwaitdown.check, svwaitup.check, utmpset.check: new;
    check program.
  * chpst.dist, runit-init.dist, runit.dist, runsv.dist, runsvchdir.dist,